connect_cassandra.py added en fixed create_tableCassandra.py and docker-compose.yml

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,8 +1,18 @@
 version: '3'
 
 services:
-   cassandra-1:
-     image: cassandra
-     restart: always
-     ports:
-       - 9042:9042
+  cassandra:
+    image: cassandra:latest  
+    restart: always
+    ports:
+      - "9042:9042"  
+    container_name: cassandra  
+    environment:
+      - CASSANDRA_CLUSTER_NAME=TestCluster
+    volumes:
+      - cassandra-data:/var/lib/cassandra
+
+volumes:
+  cassandra-data:
+    driver: local
+
