--- a/SQLenv.yml
+++ b/SQLenv.yml
@@ -23,5 +23,9 @@ dependencies:
   - xz=5.4.6=h5eee18b_1
   - zlib=1.2.13=h5eee18b_1
   - pip:
+      - faker==30.8.2
       - mysql-connector-python==9.1.0
+      - python-dateutil==2.9.0.post0
+      - six==1.16.0
+      - typing-extensions==4.12.2
 prefix: /home/bigdata/miniconda3/envs/sqlenv
